styles/home.css
body {
  margin: auto;
  /* background-color: black; */
}

header nav,
footer {
  background-image: linear-gradient(165deg, #00aaff, #000a66);
  color: white;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  /* padding:0px 5px; */
  padding: 10px;
}

header a {
  box-shadow: inset 0 0 10px rgb(0, 17, 255), 0 0 15px rgb(0, 89, 255);
  border-radius: 10px;

  background-color: rgba(255, 255, 255, 0.767);
  color: rgba(0, 0, 0, 0.705);
  padding: 8px;
}
header a:visited {
  color: rgb(255, 0, 0);
}

main {
  /* background-image: linear-gradient(135deg, #00aaff, #000a66); */
  display: grid;
  padding: 10px;
  background-image: url("../images/galaxy.webp");
  background-size: cover;
  background-repeat: no-repeat;
  background-position-x: center;
}

main p {
  box-shadow: inset 0 0 10px rgb(0, 17, 255), 0 0 15px rgb(0, 89, 255);
  background-color: rgba(240, 248, 255, 0.685);
  padding: 10px;
  border-radius: 10px;
}

#name {
  box-shadow: inset 0 0 10px rgb(0, 17, 255), 0 0 15px rgb(0, 89, 255);
  background-color: rgba(240, 248, 255, 0.685);
  text-align: center;
  width: 80%;
  height: auto;
  margin: auto;
  padding: 10px;
}

#profile {
  border-radius: 50px;
  width:300px;
  height:200px;
}

footer p {
  margin: auto;
}

@media only screen and (min-width: 350px) {
  header nav,
  footer {
    flex-direction: column;
  }
  header nav a {
    margin-bottom: 2%;
  }

  #profile {
    padding: 5px;
    margin: auto;
  }
}

@media only screen and (min-width: 800px) {
  body {
    max-width: 50em;
  }
  header nav,
  footer {
    flex-direction: row;
  }
  header nav a {
    margin-right: 1%;
    margin-bottom: 0;
  }

  #profile{
    padding:10px;
  }

  main {
    grid-template-columns: 1fr 2fr;
    grid-template-rows: 1fr 2fr;
  }
  #name {
    grid-column: 1/3;
    grid-row: 1/2;
  }
}

